--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -45,13 +45,13 @@ body {
   color: #f6ff8c;
 }
 
-.main {
+/*.main {
   background-image: url("../assets/woman.png");
   background-position: center;
   background-size: 550px;
   background-repeat: no-repeat;
   background-position: center top 45%;
-}
+}*/
 
 .intro {
   &__h {
