--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -7,20 +7,34 @@ body {
 }
 
 ._container {
-  width: 1280px;
+  width: 1270px;
   margin: auto;
 }
 
 @media (max-width: 1280px) {
   ._container {
-    width: 960px;
+    width: 1010px;
     margin: auto;
   }
 }
 
-@media (max-width: 960px) {
+@media (max-width: 1024px) {
   ._container {
-    width: 560px;
+    width: 750px;
+    margin: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  ._container {
+    width: 600px;
+    margin: auto;
+  }
+}
+
+@media (max-width: 640px) {
+  ._container {
+    width: 320px;
     margin: auto;
   }
 }
