--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -54,3 +54,10 @@ body {
 .lime {
   color: #f6ff8c;
 }
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
